--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
     <body>
         <div class="main">
             <div class="left-content">
-                <img class="star" alt="orange star" src="img/Star_fill.svg">
-                <img alt="" src="img/Done_ring_round_fill.svg">
+                <!--Melhorar brilho da estrela-->                
+                <img class="star" alt="orange star" src="img/Star_fill.svg"> 
+                <h1 class="title">Reviewers</h1>  
+                <p>Reviewers is where people can access guidelines, checklists, and other tools to 
+                assist them in reviewing papers or manuscripts. It provides a structured approach 
+                to ensure that the review process is thorough, efficient, and consistent.</p>
+                 <div class="check-list">
+                    <div class="symbols">                   
+                        <img class="check" alt="green check symbol" src="img/Done_ring_round_fill.svg"/>
+                        <img class="check" alt="green check symbol" src="img/Done_ring_round_fill.svg"/>
+                        <img class="check" alt="green check symbol" src="img/Done_ring_round_fill.svg"/>
+                    </div>
+                    <div class="descriptions">
+                        <span>Checklist to Review an Academic Paper</span>                        
+                        <span>Peer Review Checklist</span>                        
+                        <span>Checklist for Editors, Reviewers, and Authors of SPIE Journals</span>
+                    </div>
+                </div> 
             </div>
-            <div class="right-content"></div>
+            <div class="right-content"></div>             
         </div>
     </body>
 </html>
