--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
                     </div>
                 </div> 
             </div>
-            <div class="right-content"></div>             
+            <div class="right-content">
+                <div class="avaliaty">
+                    <div class="logo-stars">
+                        <img alt="google logo" class="logo" src="img/google-testimonial.png"/>
+                        <img alt="star avaliaty" class="first-star" src="img/star.svg">
+                        <img alt="star avaliaty" src="img/star.svg">
+                        <img alt="star avaliaty" src="img/star.svg">
+                        <img alt="star avaliaty" src="img/star.svg">
+                        <img alt="star avaliaty" src="img/star.svg">
+                    </div>
+                    <h2></h2>
+                    <p></p>
+                </div>
+            </div>             
         </div>
     </body>
 </html>
