--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         <div class="main">
             <div class="left-content">
                 <!--Melhorar brilho da estrela-->                
-                <img class="star" alt="orange star" src="img/Star_fill.svg"> 
+                <img class="star" alt="orange star" src="img/main_star.svg"> 
                 <h1 class="title">Reviewers</h1>  
                 <p>Reviewers is where people can access guidelines, checklists, and other tools to 
                 assist them in reviewing papers or manuscripts. It provides a structured approach 
                 to ensure that the review process is thorough, efficient, and consistent.</p>
                  <div class="check-list">
                     <div class="symbols">                   
-                        <img class="check" alt="green check symbol" src="img/Done_ring_round_fill.svg"/>
-                        <img class="check" alt="green check symbol" src="img/Done_ring_round_fill.svg"/>
-                        <img class="check" alt="green check symbol" src="img/Done_ring_round_fill.svg"/>
+                        <img class="check" alt="green check symbol" src="img/green-check-logo.svg"/>
+                        <img class="check" alt="green check symbol" src="img/green-check-logo.svg"/>
+                        <img class="check" alt="green check symbol" src="img/green-check-logo.svg"/>
                     </div>
                     <div class="descriptions">
                         <span>Checklist to Review an Academic Paper</span>                        
@@ -29,18 +29,44 @@
                 </div> 
             </div>
             <div class="right-content">
-                <div class="avaliaty">
-                    <div class="logo-stars">
-                        <img alt="google logo" class="logo" src="img/google-testimonial.png"/>
-                        <img alt="star avaliaty" class="first-star" src="img/star.svg">
-                        <img alt="star avaliaty" src="img/star.svg">
-                        <img alt="star avaliaty" src="img/star.svg">
-                        <img alt="star avaliaty" src="img/star.svg">
-                        <img alt="star avaliaty" src="img/star.svg">
+                <div class="testimonial-left">
+                    <div class="testimonial">
+                        <div class="logo-stars"> 
+                            <div class="logo">
+                                <img class="company-logo" alt="google logo" src="img/google-logo.png"/>
+                            </div>
+                            <div class="stars">
+                                <img alt="yellow star" class="avaliaty-star" src="img/yellow_star.svg"/>
+                                <img alt="yellow star" class="avaliaty-star" src="img/yellow_star.svg"/>
+                                <img alt="yellow star" class="avaliaty-star" src="img/yellow_star.svg"/>
+                                <img alt="yellow star" class="avaliaty-star" src="img/yellow_star.svg"/>
+                                <img alt="yellow star" class="avaliaty-star" src="img/gray_star.svg"/>                            
+                            </div>                                              
+                        </div>
+                        <span class="people-name">Samantha Lee</span>
+                        <p class="testimonial-descriptions">The checklist ensures that the review process is thorough</p>
                     </div>
-                    <h2></h2>
-                    <p></p>
+                </div>  
+                
+                <div class="testimonial-right">
+                    <div class="testimonial">
+                        <div class="logo-stars"> 
+                            <div class="logo">
+                                <img class="company-logo" alt="google logo" src="img/meta-logo.png"/>
+                            </div>
+                            <div class="stars">
+                                <img alt="yellow star" class="avaliaty-star" src="img/yellow_star.svg"/>
+                                <img alt="yellow star" class="avaliaty-star" src="img/yellow_star.svg"/>
+                                <img alt="yellow star" class="avaliaty-star" src="img/yellow_star.svg"/>
+                                <img alt="yellow star" class="avaliaty-star" src="img/yellow_star.svg"/>
+                                <img alt="yellow star" class="avaliaty-star" src="img/yellow_star.svg"/>                            
+                            </div>                                              
+                        </div>
+                        <span class="people-name">Rachel Patel</span>
+                        <p class="testimonial-descriptions">I highly recommend the Writecream Business Description</p>
+                    </div>
                 </div>
+
             </div>             
         </div>
     </body>
